...
  
  @Published public var dataModel: Response
  @Published public var dataModelIsInLocalDB: Bool = false
  @Published public var state: PresenterState = .populated
  
  public var onAddToLocalButtonClickedMessage: String {
    dataModelIsInLocalDB ? "Added to Favorite" : "Removed from Favorite"
  }
  
  public init(useCase: Interactor, dataModelId: Request) {
    self.useCase = useCase
    self.dataModelId = dataModelId
    self.dataModel = useCase.getRecipe()
...
