...
//  Created by Abhijana Agung Ramanda on 01/01/21.
//

import Foundation

public struct RecipesResponse: Codable {
  let results: [RecipeResponse]
}

public struct RecipeResponse: Codable {
  let analyzedInstructions: [AnalyzedInstruction]?
  let extendedIngredients: [ExtendedIngredient]?
  let id: Int?
  let image: String?
  let nutrition: Nutrition?
  let readyInMinutes: Int?
  let servings: Int?
  let summary: String?
  let title: String?
}

public struct AnalyzedInstruction: Codable {
  let steps: [Step]?
}

...
