...
      if showLoadMoreButton { loadMoreButton }
      if isLoading {
        ProgressView()
          .frame(maxWidth: .infinity, alignment: .center)
      }
    }
    .accessibility(identifier: "remote_recipes")
    .listStyle(InsetGroupedListStyle())
  }
  
  private var loadMoreButton: some View {
    Button(
      action: {
...
      }
      .foregroundColor(Color(.purple))
    }
  }
  
  private var searchButtonLabel: some View {
    Image(systemName: "magnifyingglass.circle")
      .foregroundColor(Color(UIColor.purple))
      .font(.title2)
  }
}

extension RemoteRecipesView {
...
